# Dailiy-Research-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  development_checklist.md  environment.yml  pyproject.toml
.streamlit/: config.toml
data/evaluation/: real_arxiv_candidates.jsonl  real_arxiv_labels.jsonl
docs/: current-architecture-and-data-flow.md  discovery-recommendation-skill.md  recommendation-workflow-technical-overview.md  research-synthesis-skill.md
docs/brainstorms/: 2026-04-30-001-improve-arxiv-search-requirements.md  2026-05-02-001-improve-briefing-quality-requirements.md  daily-arxiv-research-agent-requirements.md
docs/demo/: enhanced-briefing-demo.md  evaluation-summary.md  final-demo-script.md  improved-search-demo.md  staged-acceptance.md  unit1-sample-retrieval.md  unit2-daily-briefing.md  unit3-seed-personalization.md  unit4-feedback-refinement.md  unit5-workflow-trace.md  unit6-deep-explanation.md  unit7-demo-ui.md
docs/plans/: 2026-04-21-001-feat-daily-arxiv-agent-plan.md  2026-04-30-001-feat-hybrid-arxiv-search-plan.md  2026-05-02-001-feat-improve-briefing-quality-plan.md  2026-05-06-001-feat-semantic-seed-recommendation-plan.md
docs/solutions/: 2026-04-23-001-live-api-readiness.md
report/DiscoveryRecommendationSkill/: neurips_2026.aux  neurips_2026.fdb_latexmk  neurips_2026.fls  neurips_2026.out  neurips_2026.tex
tests/: test_cli.py  test_contracts.py  test_embedding_provider.py  test_evaluation.py  test_llm_provider.py  test_orchestrator.py  test_real_arxiv_evaluation.py  test_storage.py  test_ui_smoke.py
(+60 files in other folders)
