[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-arxiv-research-agent"
version = "0.1.0"
description = "Local Agent + Skills system for daily arXiv research briefings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
retrieval = [
    "httpx>=0.27",
    "feedparser>=6.0",
]
ranking = [
    "scikit-learn>=1.4",
]
pdf = [
    "pymupdf>=1.24",
]
ui = [
    "streamlit>=1.36",
]
all = [
    "pytest>=8.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "scikit-learn>=1.4",
    "pymupdf>=1.24",
    "streamlit>=1.36",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
